if(BUILD_ROOT)

message(WARN "${ROOT_INCLUDE_DIRS}")
  root_generate_dictionary(G__Channel "include/Channel.hpp" LINKDEF "include/ChannelLinkDef.hpp")
  add_library(Channel OBJECT "src/Channel.cpp" G__Channel.cxx)
  target_include_directories(Channel PRIVATE "${YAODAQ_INCLUDE}" PRIVATE "./include")
  target_link_directories(Channel PRIVATE ${ROOT_CORE_LIBRARY})
  target_link_libraries(Channel PUBLIC ROOT::Core PUBLIC ROOT::Tree)
  add_library(Channel_static STATIC $<TARGET_OBJECTS:Channel>)
  target_link_libraries(Channel_static PUBLIC ROOT::Core PUBLIC ROOT::Tree)
  target_include_directories(Channel_static PUBLIC $<BUILD_INTERFACE:${YAODAQ_INCLUDE}> PUBLIC $<INSTALL_INTERFACE:${INCLUDE_OUTPUT_DIR}>)
  add_library(Channel_shared SHARED $<TARGET_OBJECTS:Channel>)
  target_link_libraries(Channel_shared PUBLIC ROOT::Core PUBLIC ROOT::Tree)
  target_include_directories(Channel_shared PUBLIC $<BUILD_INTERFACE:${YAODAQ_INCLUDE}> PUBLIC $<INSTALL_INTERFACE:${INCLUDE_OUTPUT_DIR}>)
  add_custom_target(CopyChannel DEPENDS ALL COMMAND ${CMAKE_COMMAND} -E copy libChannel_rdict.pcm "${RUNTIME_OUTPUT_DIRECTORY}/libChannel_rdict.pcm")
  set_target_properties(Channel PROPERTIES PUBLIC_HEADER "include/Channel.hpp")
  install(TARGETS Channel)
  root_generate_dictionary(G__Event "include/Event.hpp" LINKDEF "include/EventLinkDef.hpp")
  add_library(Event OBJECT "src/Event.cpp" G__Event.cxx)
  target_include_directories(Event PRIVATE "${YAODAQ_INCLUDE}" PRIVATE "./include")
  target_link_libraries(Event PUBLIC ROOT::Core PUBLIC ROOT::Tree)
  add_library(Event_static STATIC $<TARGET_OBJECTS:Event>)
  target_include_directories(Event_static PUBLIC $<BUILD_INTERFACE:${YAODAQ_INCLUDE}> PUBLIC $<INSTALL_INTERFACE:${INCLUDE_OUTPUT_DIR}>)
  target_link_libraries(Event_static PUBLIC ROOT::Core PUBLIC ROOT::Tree)
  add_library(Event_shared SHARED $<TARGET_OBJECTS:Event>)
  target_include_directories(Event_shared PUBLIC $<BUILD_INTERFACE:${YAODAQ_INCLUDE}> PUBLIC $<INSTALL_INTERFACE:${INCLUDE_OUTPUT_DIR}>)
  target_link_libraries(Event_shared PUBLIC ROOT::Core PUBLIC ROOT::Tree PUBLIC Channel_shared)
  add_custom_target(CopyEvent DEPENDS ALL COMMAND ${CMAKE_COMMAND} -E copy libEvent_rdict.pcm "${RUNTIME_OUTPUT_DIRECTORY}/libEvent_rdict.pcm")
  set_target_properties(Event PROPERTIES PUBLIC_HEADER "include/Event.hpp")
  install(TARGETS Event)

  add_library(DAQFile STATIC "src/DAQFile.cpp")
  target_link_libraries(DAQFile PUBLIC RootFile PUBLIC Event_static PUBLIC Channel_static PUBLIC elogpp::elogpp)
  target_include_directories(DAQFile PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> PUBLIC $<INSTALL_INTERFACE:${INCLUDE_OUTPUT_DIR}>)
  set_target_properties(DAQFile PROPERTIES PUBLIC_HEADER "include/DAQFile.hpp")
  install(TARGETS DAQFile)

  add_executable(DAQFileWritter DAQFileWritter.cpp)
  target_link_libraries(DAQFileWritter PRIVATE DAQFile PRIVATE FileWritter PRIVATE CLI11  PRIVATE ProgramInfos PUBLIC GeneralParameters)
  install(TARGETS DAQFileWritter)
endif()

add_executable(Digitizer Digitizer.cpp)
target_link_libraries(Digitizer PRIVATE CAENBoards PRIVATE Board PRIVATE CLI11 PRIVATE ProgramInfos PUBLIC GeneralParameters)
install(TARGETS Digitizer)
