if(NOT APPLE)

if(BUILD_DAQ OR CAEN_HARDWARE)
  set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_CURRENT_SOURCE_DIR}/external")

  include(CAENlibs)
  set(CAEN_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/include")
  set(CAEN_SRC "${CMAKE_CURRENT_SOURCE_DIR}/src")

  # CAEN Exceptions
  set(CAEN_EXCEPTION_INCLUDE_FILES ${CAEN_INCLUDE}/CAENCommException.hpp ${CAEN_INCLUDE}/CAENDigitizerException.hpp ${CAEN_INCLUDE}/CAENFlashException.hpp ${CAEN_INCLUDE}/CAENHVException.hpp ${CAEN_INCLUDE}/CAENVMEException.hpp
                                   $<$<OR:$<STREQUAL:${ARCHITECTURE},x64>,$<STREQUAL:${ARCHITECTURE},x86>>:${CAEN_INCLUDE}/CAENDPPException.hpp>
      )
  set(CAEN_EXCEPTION_SRC_FILES ${CAEN_SRC}/CAENCommException.cpp ${CAEN_SRC}/CAENDigitizerException.cpp ${CAEN_SRC}/CAENFlashException.cpp ${CAEN_SRC}/CAENHVException.cpp ${CAEN_SRC}/CAENVMEException.cpp
                               $<$<OR:$<STREQUAL:${ARCHITECTURE},x64>,$<STREQUAL:${ARCHITECTURE},x86>>:${CAEN_SRC}/CAENDPPException.cpp>
      )
  add_library(CAENExceptions STATIC "${CAEN_EXCEPTION_SRC_FILES}")
  set_target_properties(CAENExceptions PROPERTIES PUBLIC_HEADER "${CAEN_EXCEPTION_INCLUDE_FILES}")
  target_link_libraries(CAENExceptions PUBLIC CAENComm::CAENComm PUBLIC CAENDPP::CAENDPP PUBLIC CAENDigitizer::CAENDigitizer PUBLIC CAENHV::CAENHV PUBLIC CAENVME::CAENVME PUBLIC Exception)
  target_include_directories(CAENExceptions PUBLIC $<BUILD_INTERFACE:${CAEN_INCLUDE}> PUBLIC $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/CAEN>)
  install(TARGETS CAENExceptions PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/CAEN")

  # CAEN Connectors
  set(CAEN_CONNECTOR_INCLUDE_FILES ${CAEN_INCLUDE}/CAENVMEConnector.hpp ${CAEN_INCLUDE}/CAENDigitizerConnector.hpp ${CAEN_INCLUDE}/CAENHVConnector.hpp)
  set(CAEN_CONNECTOR_SRC_FILES ${CAEN_SRC}/CAENVMEConnector.cpp ${CAEN_SRC}/CAENDigitizerConnector.cpp ${CAEN_SRC}/CAENHVConnector.cpp)
  add_plugin(
    TARGET
    CAENConnectors
    VERSION
    ${YAODAQ_VERSION_MAJOR}
    BASE
    yaodaq::Connector
    CHILDS
    CAEN::CAENVMEConnector
    CAEN::CAENDigitizerConnector
    CAEN::CAENHVConnector
    SOURCES ${CAEN_CONNECTOR_SRC_FILES}
    PUBLIC_HEADERS ${CAEN_CONNECTOR_INCLUDE_FILES}
  )
  #add_library(CAENConnectors SHARED "${CAEN_CONNECTOR_SRC_FILES}")
  #set_target_properties(CAENConnectors PROPERTIES PUBLIC_HEADER "${CAEN_CONNECTOR_INCLUDE_FILES}")
  target_link_libraries(CAENConnectors PRIVATE CAENExceptions PRIVATE Connector PRIVATE Message)
  install(TARGETS CAENConnectors LIBRARY DESTINATION "${DEFAULT_YAODAQ_PLUGINS_PATH}" PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/CAEN")

  # CAEN Boards
  set(CAENBOARDS_INCLUDE_FILES ${CAEN_INCLUDE}/CAENVMEBoard.hpp ${CAEN_INCLUDE}/CAENCommBoard.hpp ${CAEN_INCLUDE}/CAENDigitizerBoard.hpp ${CAEN_INCLUDE}/Flash.hpp ${CAEN_INCLUDE}/SPI.hpp)
  set(CAENBOARDS_SRC_FILES ${CAEN_SRC}/CAENVMEBoard.cpp ${CAEN_SRC}/CAENCommBoard.cpp ${CAEN_SRC}/CAENDigitizerBoard.cpp ${CAEN_SRC}/SPI.cpp ${CAEN_SRC}/Flash.cpp)

  add_library(CAENBoards SHARED "${CAENBOARDS_SRC_FILES}")
  set_target_properties(CAENBoards PROPERTIES PUBLIC_HEADER "${CAENBOARDS_INCLUDE_FILES}" INTERPROCEDURAL_OPTIMIZATION FALSE)
  target_link_libraries(CAENBoards PUBLIC CAENExceptions PRIVATE Board)
  install(TARGETS CAENBoards LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/CAEN")


  # plugin( TARGET CAENBoards VERSION ${YAODAQ_VERSION_MAJOR} BASE Board CHILDS CAEN::CAENVMEBoard CAEN::CAENDigitizerBoard CAEN::CAENCommBoard )
  add_subdirectory(tests)
endif()
endif()
