set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_CURRENT_SOURCE_DIR}/external")


set(ISEG_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(ISEG_SRC "${CMAKE_CURRENT_SOURCE_DIR}/src")

set(NHS_INCLUDES "${ISEG_INCLUDE}/NHSBoard.hpp")
set(NHS_SRC_FILES "${ISEG_SRC}/NHSBoard.cpp")

add_library(NHSBoard SHARED "${NHS_SRC_FILES}")
target_include_directories(NHSBoard PUBLIC ${ISEG_INCLUDE})
set_target_properties(NHSBoard PROPERTIES PUBLIC_HEADER "${NHS_INCLUDES}" INTERPROCEDURAL_OPTIMIZATION FALSE)
add_dependencies(NHSBoard Board)
target_link_libraries(NHSBoard PRIVATE Board)
install(TARGETS NHSBoard RUNTIME DESTINATION "${RUNTIME_OUTPUT_DIR}" LIBRARY DESTINATION "${LIBRARY_OUTPUT_DIR}" ARCHIVE DESTINATION "${ARCHIVE_OUTPUT_DIR}" PUBLIC_HEADER DESTINATION "${INCLUDE_OUTPUT_DIR}/CAEN")
