
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/external" "${CMAKE_SOURCE_DIR}/external")
include(LCIO)

set(LCIO_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(LCIO_SRC "${CMAKE_CURRENT_SOURCE_DIR}/src")

add_library(LCIOFile STATIC "${LCIO_SRC}/LCIOFile.cpp")
add_dependencies(LCIOFile File LCIO::LCIO)
set_target_properties(LCIOFile PROPERTIES PUBLIC_HEADER "${LCIO_INCLUDE}/LCIOFile.hpp")
target_link_libraries(LCIOFile PUBLIC File PUBLIC LCIO::LCIO)
target_include_directories(LCIOFile PUBLIC $<BUILD_INTERFACE:${LCIO_INCLUDE}> PUBLIC $<INSTALL_INTERFACE:${INCLUDE_OUTPUT_DIR}/LCIO>)
install(TARGETS LCIOFile RUNTIME DESTINATION "${RUNTIME_OUTPUT_DIR}" LIBRARY DESTINATION "${LIBRARY_OUTPUT_DIR}" ARCHIVE DESTINATION "${ARCHIVE_OUTPUT_DIR}" PUBLIC_HEADER DESTINATION "${INCLUDE_OUTPUT_DIR}/LCIO")

if(ENABLE_TESTS)
  add_subdirectory(tests)
endif()
