set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_CURRENT_SOURCE_DIR}/external")


set(WIENER_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(WIENER_SRC "${CMAKE_CURRENT_SOURCE_DIR}/src")

add_library(Mpod SHARED "${WIENER_SRC}/Mpod.cpp")
target_include_directories(Mpod PUBLIC "${WIENER_INCLUDE}")
set_target_properties(Mpod PROPERTIES PUBLIC_HEADER "${WIENER_INCLUDE}/Mpod.hpp" INTERPROCEDURAL_OPTIMIZATION FALSE)
add_dependencies(Mpod Board)
target_link_libraries(Mpod PRIVATE Board)
install(TARGETS Mpod RUNTIME DESTINATION "${RUNTIME_OUTPUT_DIR}" LIBRARY DESTINATION "${LIBRARY_OUTPUT_DIR}" ARCHIVE DESTINATION "${ARCHIVE_OUTPUT_DIR}" PUBLIC_HEADER DESTINATION "${INCLUDE_OUTPUT_DIR}/WIENER")
