add_executable(CAENErrorsTest CAENErrors.cpp)
set_target_properties(CAENErrorsTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_INSTALL_PREFIX})
target_include_directories(CAENErrorsTest PRIVATE "${INCLUDE_OUTPUT_DIR}")
target_link_libraries(CAENErrorsTest PRIVATE CAENExceptions PRIVATE doctest_with_main)
doctest_discover_tests(CAENErrorsTest COMMAND "CAENErrorsTest")
