add_executable(RootTests RootFile.cpp)
add_dependencies(RootTests doctest_with_main RootFile)
set_target_properties(RootTests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_INSTALL_PREFIX})
target_include_directories(RootTests PRIVATE "${INCLUDE_OUTPUT_DIR}")
target_link_libraries(RootTests PRIVATE RootFile PRIVATE doctest_with_main)
doctest_discover_tests(RootTests COMMAND RootTests ADD_LABELS "ROOT test")
